--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,12 +1,46 @@
 [buildout]
-develop=${buildout:directory}/src/project92/setup.py
+develop=${buildout:directory}/src/example-mapper/setup.py
 parts=
     nginx
+    uwsgi
+    memcached-supervisor
+    uwsgi-supervisor
+    python
 newest = false
+project-name = example-mapper
+eggs = example-mapper
+
+[python]
+recipe = zc.recipe.egg
+interpreter = python
+eggs = ${buildout:eggs}
+
+[memcached-supervisor]
+recipe = collective.recipe.template
+input = buildout_templates/supervisor.memcached
+output = ${buildout:directory}/supervisor/${buildout:project-name}.memcached.conf
+name = ${buildout:project-name}
+interface = 127.0.0.1
+port = 8001
+memory = 64
+user = www-data
+log = ${buildout:directory}/log/memcached.log
+
+[uwsgi-supervisor]
+recipe = collective.recipe.template
+input = buildout_templates/supervisor.uwsgi
+output = ${buildout:directory}/supervisor/${buildout:project-name}.uwsgi.conf
+name = ${buildout:project-name}
+user = www-data
+log = ${buildout:directory}/log/uwsgi.log
 
 [nginx]
-recipe = collective.recipe.template[genshi]:genshi
+recipe = collective.recipe.template
 input = buildout_templates/conf.nginx
-server-name = localhost
-output = ${buildout:directory}/nginx/mapper.conf
-port = 80
+output = ${buildout:directory}/nginx/${buildout:project-name}.conf
+
+[uwsgi]
+recipe = shaunsephton.recipe.uwsgi
+socket = 127.0.0.1:9002
+module = mapper.wsgi
+eggs = ${buildout:eggs}
