--- a/nginx/desktop.conf
+++ b/nginx/desktop.conf
@@ -1,9 +1,9 @@
 server {
-	listen   81;
+	listen   82;
 	server_name  localhost;
 
 	location / {
 		default_type text/plain;
-		echo "high instance";
+		echo "desktop instance";
 	}
 }
