--- a/nginx/mobile.conf
+++ b/nginx/mobile.conf
@@ -1,9 +1,9 @@
 server {
-	listen   82;
+	listen   81;
 	server_name  localhost;
 
 	location / {
 		default_type text/plain;
-		echo "medium instance";
+		echo "mobile instance";
 	}
 }
